<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name" description="Sample Application to test the Meet Live Sharing APIs. 'Meet' is the product name. [CHAR_LIMIT=NONE]"> Meet Live Sharing</string>
  <string name="button_play_text" description="Play [CHAR_LIMIT=25]">Play</string>
  <string name="button_pause_text" description="Pause [CHAR_LIMIT=25]">Pause</string>
  <string name="button_set_metadata" description="Set Participant Metadata [CHAR_LIMIT=NONE]">Set Participant Metadata</string>
  <string name="button_ongoing_activity_text" description="Ongoing check [CHAR_LIMIT=25]">Check Ongoing</string>
  <string name="media_selection_message" description="Media selection message [CHAR_LIMIT=NONE]">Media is selected for playback.</string>
  <string name="switch_bgcolorchange_text" description="Background color change [CHAR_LIMIT=NONE]">Change Theme</string>
  <string name="textview_meeting_status_text" description="Meeting Status [CHAR_LIMIT=NONE]">Meeting Status</string>
  <string name="textview_logwindowlabel_text" description="Log Window [CHAR_LIMIT=NONE]">Log Window (Long click to copy logs to clipboard)</string>
  <string name="textview_timer_running_text" translatable="false">Playing %1s:  %2$d/%3$d</string>
  <string name="textview_timer_placeholder_text" description="Placeholder string for timer [CHAR_LIMIT=NONE]">Please select a media to play.</string>
  <string name="togglebutton_media1_text" description="Media 1 [CHAR_LIMIT=11]">Media 1</string>
  <string name="togglebutton_media2_text" description="Media 2 [CHAR_LIMIT=11]">Media 2</string>
  <string name="togglebutton_media1_off_text" description="Media 1 Off [CHAR_LIMIT=11]">Media 1 Off</string>
  <string name="togglebutton_media1_on_text" description="Media 1 On [CHAR_LIMIT=11]">Media 1 On</string>
  <string name="togglebutton_media2_off_text" description="Media 2 Off [CHAR_LIMIT=11]">Media 2 Off</string>
  <string name="togglebutton_media2_on_text" description="Media 2 On [CHAR_LIMIT=11]">Media 2 On</string>
  <string name="start_co_watching" translatable="false">Start co-watching</string>
  <string name="start_co_doing" translatable="false">Start co-doing</string>
  <string name="start_both" translatable="false">Start both</string>
  <string name="end_session" translatable="false">End session</string>
</resources>