<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2022 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         https://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <Button
      android:id="@+id/button_play"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:text="@string/button_play_text"
      android:textAllCaps="false"
      android:textSize="11sp"
      app:layout_constraintEnd_toStartOf="@id/button_pause"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/seekbar_media" />
  <Button
      android:id="@+id/button_pause"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:text="@string/button_pause_text"
      android:textAllCaps="false"
      android:textSize="11sp"
      app:layout_constraintBaseline_toBaselineOf="@id/button_play"
      app:layout_constraintEnd_toStartOf="@id/button_ongoing_activity_check"
      app:layout_constraintStart_toEndOf="@id/button_play" />
  <Button
      android:id="@+id/button_ongoing_activity_check"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:text="@string/button_ongoing_activity_text"
      android:textAllCaps="false"
      android:textSize="11sp"
      app:layout_constraintBaseline_toBaselineOf="@id/button_pause"
      app:layout_constraintEnd_toStartOf="@id/togglebutton_meetingconnection"
      app:layout_constraintStart_toEndOf="@id/button_pause" />
  <SeekBar
      android:id="@+id/seekbar_media"
      android:layout_width="0dp"
      android:layout_height="30dp"
      android:layout_marginTop="8dp"
      android:layout_marginStart="14dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toStartOf="@id/guideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textview_timer" />
  <Spinner
      android:id="@+id/spinner_playoutrate"
      android:spinnerMode="dropdown"
      android:textColor="@color/spinner_text_color"
      android:background="@color/spinner_background_color"
      android:layout_width="wrap_content"
      android:layout_height="30dp"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintTop_toBottomOf="@id/textview_timer"
      app:layout_constraintStart_toEndOf="@id/guideline"
      app:layout_constraintEnd_toEndOf="parent"/>
  <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
  <Switch
      android:id="@+id/switch_cowatching"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:textSize="11sp"
      android:text="@string/switch_cowatching_text"
      app:layout_constraintBaseline_toBaselineOf="@id/togglebutton_media2"
      app:layout_constraintStart_toEndOf="@id/togglebutton_media2" />
  <TextView
      android:id="@+id/textview_timer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/textview_timer_placeholder_text"
      android:textSize="11sp"
      app:layout_constraintStart_toStartOf="@id/button_play"
      app:layout_constraintTop_toBottomOf="@id/togglebutton_media1" />
  <TextView
      android:id="@+id/textview_logwindowlabel"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:textSize="11sp"
      android:text="@string/textview_logwindowlabel_text"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/splitline_hor2" />
  <TextView
      android:id="@+id/textview_logwindow"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:background="#E3DFDF"
      android:scrollbars="vertical"
      android:gravity="bottom"
      android:textSize="10sp"
      android:textColor="@color/log_text_color"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textview_logwindowlabel" />
  <ToggleButton
      android:id="@+id/togglebutton_media1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:text="@string/togglebutton_media1_text"
      android:textOff="@string/togglebutton_media1_off_text"
      android:textOn="@string/togglebutton_media1_on_text"
      android:textSize="11sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  <ToggleButton
      android:id="@+id/togglebutton_media2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:text="@string/togglebutton_media2_text"
      android:textOff="@string/togglebutton_media2_off_text"
      android:textOn="@string/togglebutton_media2_on_text"
      android:textSize="11sp"
      app:layout_constraintBaseline_toBaselineOf="@id/togglebutton_media1"
      app:layout_constraintStart_toEndOf="@id/togglebutton_media1" />
  <ToggleButton
      android:id="@+id/togglebutton_meetingconnection"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minWidth="0dp"
      android:minHeight="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:textOn="@string/togglebutton_meetingconnection_on_text"
      android:textOff="@string/togglebutton_meetingconnection_off_text"
      android:textSize="11sp"
      app:layout_constraintStart_toEndOf="@id/button_ongoing_activity_check"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBaseline_toBaselineOf="@id/button_ongoing_activity_check" />
  <View
      android:id="@+id/splitline_hor1"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_height= "1dp"
      android:background="@color/separator_line_background"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/togglebutton_meetingconnection"/>
  <Switch
      android:id="@+id/switch_codoing"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:textSize="11sp"
      android:text="@string/switch_codoing_text"
      app:layout_constraintStart_toEndOf="@id/switch_bgcolorchange"
      app:layout_constraintTop_toBottomOf="@id/splitline_hor1" />
  <Switch
      android:id="@+id/switch_bgcolorchange"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:textSize="11sp"
      android:text="@string/switch_bgcolorchange_text"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintStart_toEndOf="@id/togglebutton_media2"
      app:layout_constraintTop_toBottomOf="@id/splitline_hor1" />
  <View
      android:id="@+id/splitline_hor2"
      android:layout_marginTop="8dp"
      android:layout_width="match_parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_height= "1dp"
      android:background="@color/separator_line_background"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/switch_bgcolorchange"/>
</androidx.constraintlayout.widget.ConstraintLayout>
